@@ -62,7 +62,8 @@ class Smarty_Internal_CacheResource_File {
     {
         if (!$template->isEvaluated()) {
             if (!is_object($this->smarty->write_file_object)) {
-                $this->smarty->loadPlugin("Smarty_Internal_Write_File");
+                require_once(SMARTY_SYSPLUGINS_DIR . 'internal.write_file.php');
+                //$this->smarty->loadPlugin("Smarty_Internal_Write_File");
                 $this->smarty->write_file_object = new Smarty_Internal_Write_File;
             } 
             return $this->smarty->write_file_object->writeFile($template->getCachedFilepath(), $template->rendered_content);
